--- a/insurance/templates/calc/calc.html
+++ b/insurance/templates/calc/calc.html
@@ -26,7 +26,7 @@
         </li>
     </ul>
 
-    <div class="ui-tabs-panel ui-widget-content ui-corner-bottom">
+    <div class="ui-tabs-panel ui-widget-content ui-corner-bottom no-background">
         {% block tab_content %}
         {% endblock tab_content %}
     </div>
