--- a/insurance/templates/calc/ifl/step6.html
+++ b/insurance/templates/calc/ifl/step6.html
@@ -171,9 +171,16 @@
                 </td>
             </tr>
         </table>
-        <input id="order-button" type="image" src="/static/images/order_button_step3.png" value="Заказать"/>
+        <table width="220px">
+            <tr><td style="vertical-align: top">
+                <input type="button" class="backward-button" style="margin-top: 0" value="Назад"/>
+            </td><td style="vertical-align: top">
+            <input id="order-button" type="image" src="/static/images/order_button_step3.png" value="Заказать"/>
+            </td></tr>
+        </table>
 
         <h5>Обратите внимание! Доставка курьером осуществляется только в пределах МКАД.</h5>
     </form>
+
 
 {% endblock %}
