--- a/insurance/templates/calc/kasko/step6.html
+++ b/insurance/templates/calc/kasko/step6.html
@@ -176,4 +176,6 @@
         <h5>Обратите внимание! Доставка курьером осуществляется только в пределах МКАД.</h5>
     </form>
 
+    <input type="button" class="backward-button" value="Назад"/>
+
 {% endblock %}
