--- a/insurance/templates/calc/success.html
+++ b/insurance/templates/calc/success.html
@@ -4,7 +4,11 @@
 
 
 {% block tab_content %}
+<div class="form-round-block">
     <h2>Создание полиса завершено успешно</h2>
 
+    <br/>
+
     Созданные заявки на полисы вы можете увидеть в разделе <a href="{% url userprofile_policylist %}">«Мои полисы»</a> профиля.
+</div>
 {% endblock %}
